Additional notes and links for the W65C816SXB

--- a/_posts/2025-05-08-w65c816sxb.md
+++ b/_posts/2025-05-08-w65c816sxb.md
@@ -15,6 +15,10 @@ I'll keep updating this page as I learn more about the board and get it working.
 
 ![W65C816SXB](/assets/img/2025-05-08-816SXB.gif)
 
+The W65C816SXB is a single-board computer utilizing the W65816 microprocessor. The board has 32 KB SRAM and 128 KB flash memory. The 128 KB flash memory is partitioned into four banks, one of which is accessible at a time in the address range $8000 - $FFFF.
+
+By default, the flash bank on powerup contains monitor code which is designed to interface with a debugger application that runs on a Windows PC. Together, the monitor code and debugger application allow you to load code, inspect and modify memory and CPU registers, set breakpoints, single-step, etc.
+
 - W65C816S MPU running at 8MHz.
 - External Memory Bus with expansion connector
 - 32KBytes SRAM
@@ -24,3 +28,54 @@ I'll keep updating this page as I learn more about the board and get it working.
 - 1 x W65C51N ACIA with ACIA Expansion Port
 - USB Programmer’s port
 
+## WDCTools
+
+Maybe it is just me, or maybe [WDCTools](http://wdc65xx.com/Products/WDCTools/) are not supported on Windows 10/11, but I cannot get these tools to work properly. I can compile the samples, it looks like they upload to the board, but I never see changes in the memory or anything happening on the board. The tools do work using the simulators, just not with the boards, so more experimentation is needed.
+
+**Hint:** Install to the default `C:\WDC` directory otherwise you will need to manually update paths, settings and configuration files.
+
+## 3rd-Party Tools
+
+- [w65c816sxb-hacker](https://github.com/andrew-jacobs/w65c816sxb-hacker) a tool for modifying the firmware on your WDC W65C816SXB Development Board via the ACIA port.
+- [w65c02sxb-monitor](https://github.com/andrew-jacobs/w65c02sxb-monitor) a simple monitor for the WDC W65C02SXB development board that can be assembled, downloaded and run on Windows, Linux and MacOS.
+- [Web-W65C02SXB](https://github.com/sandergroen/Web-W65C02SXB) web based IDE for the W65C02SXB.
+- [sbx](https://github.com/kalj/sxb) Python script to interact with the W65C02SXB
+
+## Forum Discussions
+
+- [W65C816SXB and the Single Linux](https://github.com/kalj/sxb)
+- [W65C02SXB board](http://forum.6502.org/viewtopic.php?f=4&t=6326&start=15)
+
+## Hackaday Projects
+
+- [W65C02SXB investigation](https://hackaday.io/project/182530/logs)
+- [W65C816SXB investigation](https://hackaday.io/project/177384/logs)
+
+## ROMs
+
+- [W65C816SXB-ROM-Disassembly](https://github.com/timali/W65C816SXB-ROM-Disassembly) this has fully reverse engineered the Monitor program, memory locations and the communication protocol.
+- [W65C816SXB-Custom-ROM](https://github.com/timali/W65C816SXB-Custom-ROM)  an improved version of the built-in ROM monitor.
+
+## Memory Map
+
+| Address | Description |
+| --- | --- |
+| 0x0000 | 32K RAM |
+| 0x7E00 | Monitor RAM |
+| 0x7F00 | 256 byte I/O space |
+| 0x8000 | Monitor code |
+| 0x8540 | Blank |
+| 0xFFFA | NMI -> 0x8104 |
+| 0xFFFC | RESET -> 0x8115 |
+| 0xFFFE | IRQ/BRK -> 0x8100 |
+
+| Address | I/O | Size |
+| --- | --- | --- |
+| 0x7F00 | XBUS_CS0 | 32 |
+| 0x7F20 | XBUS_CS1 | 32 |
+| 0x7F40 | XBUS_CS2 | 32 |
+| 0x7F60 | XBUS_CS3 | 32 |
+| 0x7F80 | USER_ACIA | 4 |
+| 0x7FA0 | USER_PIA | 32 |
+| 0x7FC0 | USER_VIA | 32 |
+| 0x7FE0 | SYSTEM_VIA | 32 |
