A few more links and now able to upload to the 65C816 board

--- a/_posts/2025-05-08-w65c816sxb.md
+++ b/_posts/2025-05-08-w65c816sxb.md
@@ -40,14 +40,17 @@ Maybe it is just me, or maybe [WDCTools](http://wdc65xx.com/Products/WDCTools/) 
 - [w65c02sxb-monitor](https://github.com/andrew-jacobs/w65c02sxb-monitor) a simple monitor for the WDC W65C02SXB development board that can be assembled, downloaded and run on Windows, Linux and MacOS.
 - [Web-W65C02SXB](https://github.com/sandergroen/Web-W65C02SXB) web based IDE for the W65C02SXB.
 - [sbx](https://github.com/kalj/sxb) Python script to interact with the W65C02SXB
+- [wdc_uploader_term](https://github.com/cyberdo/wdc_uploader_term) fork of wdc_uploader_term from WDC. To be used with newer monitors for W65C816SXB. First version in the history is the WDC version.
 
 ## Forum Discussions
 
-- [W65C816SXB and the Single Linux](https://github.com/kalj/sxb)
+- [W65C816SXB](http://forum.6502.org/viewtopic.php?f=1&t=8199&hilit=W65C816SXB) mentions that the monitor protocol has changed? Three byte initial command?
+- [W65C816SXB communication error?](http://forum.6502.org/viewtopic.php?f=1&t=8087) Says the monitor program has changed and has a link to a new uploader in python.
 - [W65C02SXB board](http://forum.6502.org/viewtopic.php?f=4&t=6326&start=15)
 
 ## Hackaday Projects
 
+- [W65C816SXB](http://forum.6502.org/viewtopic.php?f=1&t=8199&hilit=W65C816SXB) mentions the handshake has changed on the newer boards?
 - [W65C02SXB investigation](https://hackaday.io/project/182530/logs)
 - [W65C816SXB investigation](https://hackaday.io/project/177384/logs)
 
@@ -55,6 +58,7 @@ Maybe it is just me, or maybe [WDCTools](http://wdc65xx.com/Products/WDCTools/) 
 
 - [W65C816SXB-ROM-Disassembly](https://github.com/timali/W65C816SXB-ROM-Disassembly) this has fully reverse engineered the Monitor program, memory locations and the communication protocol.
 - [W65C816SXB-Custom-ROM](https://github.com/timali/W65C816SXB-Custom-ROM)  an improved version of the built-in ROM monitor.
+- [msbasic](https://github.com/mist64/msbasic/pull/11) PR to get BASIC running on the board
 
 ## Memory Map
 
